...
            FloatingActionButton(
                onClick = {
                    navController.navigate(Screen.AddSpendsScreen.route)
                },
                backgroundColor = MaterialTheme.colors.primary
            ) {
                Icon(imageVector = Icons.Default.PriceCheck, contentDescription = "Add")
            }
        },
        scaffoldState = scaffoldState
    ) {
        Column(modifier = Modifier.fillMaxSize()) {

...
                    .weight(6f)
            ) {
                LazyColumn(
                    modifier = Modifier.fillMaxSize()
                ) {
                    items(spendsState) { spend ->
                        SpendItem(spend)
                        Divider(modifier = Modifier.padding(10.dp))

                    }
                }


...
